# hybridrag

./: .env.docker.example  .env.example  .gitignore  DEV_TESTING_GUIDE.md  Dockerfile  MACHINE_STATE_SETUP.md  OPTIMIZATION_STRATEGY.md  QUICK_START_SPECSTORY.md  README.md  SPECSTORY_CHEATSHEET.md  activate_env.sh  docker-compose.yml  hybridrag.py  hybridrag_mcp_server.py  lightrag_db_supported.tx  pyproject.toml  requirements-mcp.txt  requirements.txt  tasks_tiered_ingestion.md  test_json_db_direct.py
.memory/: session.json
config/: claude_desktop_config.example.json  claude_desktop_config.multi_project.json  claude_desktop_config.uv.json  config.py
docker/: docker-compose.postgres.yaml
docs/: BATCH_INGESTION_FLOW.md  BATCH_INGESTION_QUICKSTART.md  CHEATSHEET.md  DB_MANAGER_CHEATSHEET.md  FRESH_INSTALL.md  HYBRIDRAG_SPECSTORY_SETUP_GUIDE.md  IMPLEMENTATION_PLAN.md  MCP_SERVER_INTEGRATION.md  MIGRATION.md  MIGRATION_USER_STORIES.md  QUERY_MODES.md  QUICKSTART.md  README.md  SPECSTORY_CHEATSHEET.md  SPECSTORY_QUICKSTART.md  TROUBLESHOOTING.md  USE_CASE_SCENARIOS.md  VERIFICATION_GUIDE.md
hybridrag_mcp/: __init__.py  __main__.py  claude_desktop_config.example.json  diagnostic_logging.py  server.py
memory-bank/: CLAUDE.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
migrations/: 001_create_ingestion_queue.sql
new_deeplake_features/: RECENCY_IMPLEMENTATION_SUMMARY.md  customdeeplake_v4.py  deeplake_db_structure.md  deeplake_v4_cliff_notes.md  recency_search_example.py
prd/: ENHANCED_PLAN_ANALYSIS.md  KEY_FINDINGS_SUMMARY.md  README.md  UPDATED_FEASIBILITY_REPORT.md
scripts/: README.md  alter_vector_dimension.py  batch-ingestion-controller.py  bootstrap_file_tracker.py  deeplake_to_lightrag.py  deeplake_to_lightrag_incremental.py  fix_embeddings.py  folder_to_lightrag.py  hybridrag-enrichment.py  hybridrag-watcher.py  hybridrag-watcher@.service  ingest_recursive.sh  setup_mcp_server.sh  (+8 more)
(+98 files in other folders)
